--- a/hello.html
+++ b/hello.html
@@ -10,5 +10,11 @@
     <h1>
         Welcome to my Web Page!
     </h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Accusantium sed incidunt totam nemo rem recusandae, nesciunt
+         velit quas quam, praesentium, officiis ducimus doloribus. 
+         Distinctio nemo consectetur dolorum molestiae odio error.
+    </p>
 </body>
 </html>
